# seo-elevator

./: .gitignore  Cargo.toml  Dockerfile  Makefile  QUICK-DRY-RUN.md  QUICK-TESTPLAN.md  QUICKSTART.md  README.md  docker-compose.yaml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: error.rs  lib.rs  types.rs
crates/analyzer/src/strategies/: business.rs  keyword.rs  mod.rs  seo_audit.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/injector/: Cargo.toml
crates/injector/src/: error.rs  lib.rs  types.rs
crates/injector/src/strategies/: meta_tags.rs  mod.rs  open_graph.rs  schema_org.rs  twitter_cards.rs
crates/ml-engine/: Cargo.toml
crates/ml-engine/src/: error.rs  lib.rs  optimizer.rs  sentiment.rs  trend.rs
site-templates/template-site/: index.html
