[workspace]
name = "site-ranker-rs"
resolver = "2"
members = [
    "crates/analyzer",
    "crates/injector",
    "crates/ml-engine",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["EngineVector <info@enginevector.io>"]
license = "MIT"
repository = "https://github.com/enginevector/site-ranker-rs"
description = "AI-powered SEO rank accelerator - analyze, optimize, and inject enterprise-grade SEO metadata"
keywords = ["seo", "web", "optimization", "cli", "ai"]
categories = ["command-line-utilities", "web-programming"]

[workspace.dependencies]
# Internal crates
site-ranker-analyzer = { path = "crates/analyzer" }
site-ranker-injector = { path = "crates/injector" }
site-ranker-ml-engine = { path = "crates/ml-engine" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML parsing
scraper = "0.17"
regex = "1.9"

# CLI
clap = { version = "4.4", features = ["derive", "env", "color"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"

# ML (feature-gated for lightweight builds)
# tch = "0.14"

# Utilities
url = "=2.2.2"
walkdir = "2.4"
chrono = { version = "0.4.31", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
